# codemotionetl2022

./: .gitignore  cdk.context.json  cdk.json  package-lock.json  package.json  pyproject.toml  send_data.py
infrastructure/environment/: environment.dev.ts  environment.prod.ts  index.ts
infrastructure/lib/: infrastructure-stack.ts  pipeline-stack.ts
infrastructure/lib/constructs/: data-processing.ts  data-storage.ts  kinesis-input.ts
infrastructure/lib/nested/: lambdalayers-stack.ts
infrastructure/lib/stacks/: storage.ts
infrastructure/scripts/synth/: build.sh  install.sh
infrastructure/scripts/unit-tests/: build.sh  install.sh
lambdas/crawler-runner/: index.py
src/glue-jobs/transformer/: job.py
src/lambdas/synch-redshift/: handler.py
src/lambdas/validator/: index.py
tests/: send_data.py
